# palettebook

./: .gitignore  README.md  pyproject.toml
palettebook/: __main__.py  app.py  database.py  models.py
palettebook/routes/: __init__.py  colors.py  export.py  generate.py  import_csv.py  palettes.py
palettebook/static/: app.js  index.html  style.css
palettebook/utils/: __init__.py  color_utils.py  generators.py
