[project]
name = "palettebook"
version = "0.1.0"
description = "A locally hosted web app for managing and previewing color palettes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
]

[project.scripts]
palettebook = "palettebook.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
